--- a/style.css
+++ b/style.css
@@ -221,3 +221,10 @@ body {
     width: 100%;
     height: 100%;
 }
+
+/* Esto hará que la celda donde estás escribiendo resalte más */
+.tracker-cell:focus {
+    background-color: rgba(255, 255, 255, 0.2);
+    outline: 1px solid var(--track-color);
+    color: #fff;
+}
